# thread-lens

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/client/: Dockerfile  README.md  package-lock.json  package.json
apps/client/app/: globals.css  layout.tsx  page.tsx
apps/client/app/auth/login/: page.tsx
apps/client/app/auth/register/: page.tsx
apps/client/app/components/: AuthProvider.tsx  ExportButton.tsx  FollowUpInput.tsx  HistoryMenu.tsx  HistoryPanel.tsx  OrchestratorCard.tsx  ResearchArtifact.tsx  ResearchReport.tsx  ResearchSidebar.tsx  SearchInput.tsx  SubAgentCard.tsx  Toast.tsx
apps/client/app/lib/: api.ts  export.ts  simulationData.ts  types.ts
apps/research/: .coverage  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  thread_lens.db
apps/research/src/research/: auth.py  cache.py  main.py  models.py  queue.py
apps/research/src/research/agent/: __init__.py  graph.py  key_rotator.py  nodes.py  prompts.py  state.py  tools.py
apps/research/src/research/routes/: auth.py  research.py
apps/research/tests/: conftest.py  test_auth.py  test_routes.py  test_stream.py
apps/worker/: .env.example  Dockerfile  pyproject.toml
apps/worker/src/worker/: executor.py  main.py
client/: package-lock.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: MessageInput.tsx  MessageList.tsx  ResearchReport.tsx  SearchInput.tsx  Sidebar.tsx  SubAgentCard.tsx
client/app/context/: ChatContext.tsx
client/app/lib/: fakeApi.ts  simulationData.ts
docs/: README.md  knowledge-base.md  research-architecture.md  streaming.md
infra/gcp/: .tflint.hcl  artifact-registry.tf  cloudsql.tf  gke.tf  iam.tf  main.tf  memorystore.tf  outputs.tf  terraform.tfvars.example  variables.tf  vpc.tf
infra/k8s/: configmap.yaml  namespace.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml  research.yaml  secret.yaml.example  worker.yaml
k8s/: client.yaml  ingress.yaml
