[project]
name = "research"
version = "0.1.0"
description = "Research orchestration backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0",
    "redis[hiredis]>=5.0.0",
    "aio-pika>=9.0.0",
    "thread-lens-db",
    "thread-lens-events",
    "thread-lens-research-agent",
]

[project.scripts]
research = "research.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research"]

[tool.uv.sources]
thread-lens-db = { path = "../../packages/db", editable = true }
thread-lens-events = { path = "../../packages/events", editable = true }
thread-lens-research-agent = { path = "../../packages/research-agent", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/research/main.py" = ["E402"]
