[project]
name = "worker"
version = "0.1.0"
description = "Research job worker — consumes from RabbitMQ, runs LangGraph"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.0.0",
    "redis[hiredis]>=5.0.0",
    "python-dotenv>=1.0.0",
    "thread-lens-db",
    "thread-lens-events",
    "thread-lens-research-agent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.uv.sources]
thread-lens-db = { path = "../../packages/db", editable = true }
thread-lens-events = { path = "../../packages/events", editable = true }
thread-lens-research-agent = { path = "../../packages/research-agent", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
